# video_gen_trends_analysis

./: README.md  pyproject.toml
data/: data_arxiv_video_generation_2024.csv  df_clean.csv  text_lemmatized.csv  topic_info_BERTopic.csv  topic_info_BERTopic_2.csv
src/notebooks/: arXiv_video_generation_trends.ipynb
