[project]
name = "sber-task-nlp"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Filonenko",email = "nikdfil@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "arxiv (>=2.1.3,<3.0.0)",
    "transformers (>=4.50.2,<5.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
