[project]
name = "video-gen-trends-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Filonenko",email = "nikdfil@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "transformers (>=4.50.3,<5.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "spacy (>=3.8.4,<4.0.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "arxiv (>=2.1.3,<3.0.0)",
    "pyldavis (>=3.4.1,<4.0.0)",
    "hdbscan (>=0.8.40,<0.9.0)",
    "sentence-transformers (>=4.0.1,<5.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "keybert (>=0.9.0,<0.10.0)",
    "umap-learn (>=0.5.7,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
